# Work_Playground

./: .env  README.md  pyproject.toml  requirements.txt
.github/: copilot-instructions.md
1-BasicChatbot/: 1-basicchatbot.ipynb
2-HumanAssistance/: humanintheloop.ipynb
99-Others/: sample_gemini.ipynb
MetadataAgent/: MetadataAgent.ipynb  To_Do.txt  test.ipynb
MetadataAgent/Data/: Aircraft Table.csv  safety_metadata.json  weather_data_metadata.txt
