[project]
name = "workspace"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "google-genai>=1.25.0",
    "google-generativeai>=0.8.5",
    "ipykernel>=6.29.5",
    "langchain>=0.3.26",
    "langchain-groq>=0.3.6",
    "langchain-tavily>=0.2.7",
    "langgraph>=0.5.3",
    "langsmith>=0.4.5",
    "python-dotenv>=1.1.1",
]
